--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         minSdkVersion = 24
         compileSdkVersion = 36
         targetSdkVersion = 36
+        supportLibVersion = "28.0.0"
         ndkVersion = "27.1.12297006"
         kotlinVersion = "2.1.20"
     }
